--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Assets/submodules/CommonScripts"]
 	path = Assets/submodules/CommonScripts
 	url = https://github.com/PlanetaRobotos/CommonScripts.git
+	branch = reactor
