--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.2",
+    "com.unity.cinemachine": "2.8.6",
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.feature.2d": "1.0.0",
